# graph

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp  utils.cpp
data/blogCatalog/: meta  summary.py
data/cora/: cora-G.json  cora.adjs  cora.content.id  cora.edge.head  count_edges.py  id_convert.py
distributed/include/angel/graph/interface/: commons.h
distributed/src/angel/graph/interface/: graphsage_jni.cc  supervised_graphsage_jni.cc
distributed/src/angel/graph/layer/: mean.cc
eval_scripts/: cora_eval.py  test.py  tmp.py
include/graph/: dataset.h  graph.h  graphsage.h  layer.h  libsvm.h  mean.h  metric.h  model.h  preprocessing.h  sampler.h  utils.h
java/: pom.xml
java/data/cora/: build_networkx.py  cora.edge  cora.feature  count_edges.py  id_convert.py  id_map  label_map
java/jni/angel/graph/model/: graphsage_jni.h  supervised_graphsage_jni.h
java/lib/: libtorch_graph.dylib
java/src/main/java/com/tencent/angel/graph/data/: NodeArray.java  NodeIndex.java  NodeLabel.java  SparseNodeEmbedding.java  SubGraph.java
java/src/main/java/com/tencent/angel/graph/examples/: LocalGraphSage.java  Test.java
java/src/main/java/com/tencent/angel/graph/model/: GraphSage.java  SupervisedGraphSage.java
java/src/main/java/com/tencent/angel/graph/optim/: Optimizer.java  SGD.java
native/data/blogCatalog/: edges.py  meta
native/data/cora/: cora-id_map.json
native/distributed/: CMakeLists.txt
native/distributed/include/angel/: commons.h
native/distributed/include/angel/graph/: commons.h
native/distributed/include/angel/graph/data/: subgraph.h
native/distributed/include/angel/graph/interface/: commons.h  graphsage_jni.h  supervised_graphsage_jni.h
native/distributed/include/angel/graph/layer/: mean.h
native/distributed/include/angel/graph/model/: graphsage.h
native/distributed/include/angel/pytorch/: lr.h  lr_jni.h
native/distributed/src/angel/graph/data/: subgraph.cc
native/distributed/src/angel/graph/interface/: graphsage_jni.cc  supervised_graphsage_jni.cc
native/distributed/src/angel/graph/layer/: mean.cc
native/distributed/src/angel/graph/model/: graphsage.cc
native/distributed/src/angel/pytorch/: lr.cc  lr_jni.cc
native/single/include/graph/: dataset.h  graphsage.h  metric.h
native/single/src/: graph.cc  graphsage.cc  sampler.cc
single/: CMakeLists.txt
single/include/graph/: graph.h  graphsage.h  layer.h  sampler.h
single/src/: graphsage.cc  layer.cc  metric.cc  supervised.cc  unsupervised.cc
src/: dataset.cpp  graph.cc  graphsage.cc  graphsage.cpp  layer.cc  layer.cpp  main.cpp  mean.cpp  metric.cpp  mlp.cpp  sampler.cpp  supervised.cc  supervised.cpp  test.cpp  unsupervised.cc  unsupervised.cpp  unsupervised_train.cpp
